@@ -1,6 +1,7 @@
 2002-05-07  Cristy  <cristy@mystic.es.dupont.com>
   * Lock mutex when destorying a SemaphoreInfo structure (patch provided
     by William Radcliffe).
+  * Added mingw patches provided by Derry Bryson.
 
 2002-05-05  Cristy  <cristy@mystic.es.dupont.com>
   * ImageMagick, version 5.4.5-1 released.
